@@ -7,6 +7,7 @@
       imported correctly
     - Rewrite portions of the configuration classes in config.py to make them
       faster and more flexible
+    - Deprecate const.ConvertPath() in favor of os.path.join()
 
   * Thu Jul 30 2009 Stewart Adam <s.adam at diffingo.com>
     - Remove the names only package lists
